sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:5: error: illegal start of simple expression
                     {if (plusPetit(,getValeur(k-1)))
                                    ^AlgInsertionSort:8: error: ')' expected but '}' found.
                       copie(v,l) }
                                  ^